# cs

2_Beginner-Intermediate C++/Assignments/1 - Functions/: InFile.txt  Oufile.txt  Outfile.txt  a.out  main.cpp  people
2_Beginner-Intermediate C++/Assignments/6 - OOP Bank/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
2_Beginner-Intermediate C++/Labs/: todo
2_Beginner-Intermediate C++/Labs/10 - Queues/: a.out  main.cpp  meine
2_Beginner-Intermediate C++/Labs/11 - Ordered linked list/: .CMake.swp  .li.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
2_Beginner-Intermediate C++/Labs/12 - Recurssion/: a.out  main  main.cpp
2_Beginner-Intermediate C++/Labs/16 - Polymorphism/: CMakeLists.txt
2_Beginner-Intermediate C++/Labs/16 - Polymorphism/src/: farm.cpp  farm.hpp  main.cpp  main.hpp
3_Intermediate-Advanced C++/Assignments/1Cards/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
3_Intermediate-Advanced C++/Assignments/1Cards/src/: Card.cpp  Card.hpp
3_Intermediate-Advanced C++/Lab Resources/: .~lock.JLDevelopmentMethodologies.pptx#
BulkClub/BulkClub/: BulkClub.pro  README.md  bulk_club_uml.scxml  credentials.qrc  dconfig  inside.cpp  inside.h  inside.ui  item.h  login.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  managementsystem.cpp  managementsystem.h  member.cpp  member.h  sale.cpp  sale.h  todo  user.cpp  user.h
BulkClub/build-BulkClub-Desktop-Debug/: BulkClub  Makefile  moc_inside.cpp  moc_mainwindow.cpp  qrc_credentials.cpp  qrc_res.cpp  ui_inside.h  ui_mainwindow.h
(+138 files in other folders)
